--- a/Week 7 Website/HTML Website.html
+++ b/Week 7 Website/HTML Website.html
@@ -39,8 +39,8 @@
                     and American culture. It is for people who are going
                     to travel as a tourist to the United States.</td>
                     <td>    All levels  </td>
-                    <td>January<br> March<br> June<br> July<br> August<br></td>
-                </tr><br>
+                    <td>January<br> March<br> June<br> July<br> August<br><br></td>
+                </tr>
                 <tr>
                     <td>Academic English</td>
                     <td>This course is for all students who want to
@@ -52,8 +52,8 @@
                     <td>    Pre-Intermediate - Master   </td>
                     <td>January<br>February<br>March<br>April<br>
                     May<br>June<br>July<br>August<br>September<br>
-                    October<br>November</td><br>
-                </tr><br>
+                    October<br>November<br><br></td>
+                </tr>
                 <tr>
                     <td>Vacation English</td>
                     <td>This course is for students in the country for a 
