--- a/Week 7 Website/International Student registration.html
+++ b/Week 7 Website/International Student registration.html
@@ -61,8 +61,9 @@
         
         <div>
             <h4 style="text-align:center">
-                <a href="HTML Website.html"> <<< Return to Homepage</a> <br>
+                <a href="HTML Website.html"> <<< Return to Homepage</a> <br><br>
                 <a href="New Student Information.html"> Are you a new student?</a>
             </h4> 
         </div>
     </body>
+</html>
